# cite-right

./: .gitignore  .semgrep.yml  CHANGELOG.md  CITATION_ALIGNMENT_PLAN.md  DX_REVIEW.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  wheels.yml
docs/: index.md  semgrep-community-rules.md
docs/advanced/: embedding-retrieval.md  multi-span-evidence.md  performance-tuning.md  rust-acceleration.md
docs/api/: configuration.md  core-functions.md  data-models.md
docs/concepts/: citation-alignment.md  fact-verification.md  hallucination-detection.md  how-it-works.md
docs/configuration/: citation-config.md  presets.md  segmenters.md  tokenizers.md
docs/getting-started/: check-sources-ui.md  installation.md  quickstart.md
docs/integrations/: custom-sources.md  langchain.md  llamaindex.md
docs/stylesheets/: extra.css
examples/: getting_started.ipynb
examples/perplexity_demo/: README.md  __init__.py  app.py  example_data.py  index.html
rust_core/: Cargo.toml
rust_core/src/: lib.rs  smith_waterman.rs
src/cite_right/: __init__.py  _core.pyi  citations.py  claims.py  convenience.py  fact_verification.py  hallucination.py  integrations.py
src/cite_right/core/: aligner_py.py  aligner_rust.py  citation_config.py  interfaces.py  results.py
src/cite_right/models/: base.py  embedding_index.py  sbert_embedder.py
src/cite_right/text/: answer_segmenter.py  answer_segmenter_spacy.py  passage.py  segmenter_pysbd.py  segmenter_simple.py  segmenter_spacy.py  tokenizer.py  tokenizer_huggingface.py  tokenizer_tiktoken.py
tests/: __init__.py  conftest.py  test_alignment_py.py  test_alignment_rust_parity.py  test_citations_api.py  test_citations_embedding_only_edge_cases.py  test_citations_embeddings.py  test_citations_multi_span.py  test_citations_spacy.py  test_convenience.py  test_dspy_paper_scenarios.py  test_error_conditions.py  test_fact_verification.py  test_hallucination.py  test_integrations.py  test_multilingual_content.py  test_optional_dependencies.py  test_segmenter.py  test_tokenizer.py  test_tokenizer_huggingface.py  test_tokenizer_tiktoken.py
