[project]
name = "cite-right"
version = "0.3.0"
description = "Text alignment library for citation extraction using Smith-Waterman."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
spacy = ["spacy>=3.7"]
embeddings = ["sentence-transformers>=2.2"]
tiktoken = ["tiktoken>=0.5"]
huggingface = ["transformers>=4.30", "tokenizers>=0.15"]
pysbd = ["pysbd>=0.3.4"]
langchain = ["langchain-core>=0.3.0"]
llamaindex = ["llama-index-core>=0.11.0"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=4.0",
    "ruff>=0.6",
    "pyright>=1.1",
    "maturin>=1.4",
    "radon>=6.0",
    "bandit>=1.7",
    "pip-audit>=2.6",
]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.24"]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
module-name = "cite_right._core"
python-source = "src"
manifest-path = "rust_core/Cargo.toml"
include = ["src/cite_right/py.typed", "src/cite_right/_core.pyi"]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = [".uv_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "ANN"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "E402"]
"src/cite_right/text/segmenter_spacy.py" = ["ANN401"]
"src/cite_right/integrations.py" = ["ANN401"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
# Markers are registered in conftest.py via pytest_configure

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
# Optional dependencies may not be installed during type checking
reportMissingImports = "warning"

[tool.radon]
# Maximum cyclomatic complexity allowed (B grade = 6-10, C grade = 11-20)
# We enforce B grade or better (complexity <= 10) to prevent overly complex code
cc_max = "B"
exclude = "tests/*,build/*,.venv/*"

[tool.bandit]
# Bandit security linter configuration
exclude_dirs = ["tests", ".venv", "build", "dist", ".uv_cache"]
# Skip tests that are not relevant for this project
skips = [
    "B101",  # assert_used - we use asserts in tests
    "B615",  # huggingface_unsafe_download - library allows flexible model loading
]
